# jkinds2

./: .gitignore  AGENTS.md  NOTES.md  README.md  dune-project  jkinds.install  jkinds.opam  types_report.md  types_report_off.md  types_report_on.md
_build/: .db  .digest-db  log
_build/default/: META.jkinds  jkinds.dune-package  jkinds.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: decl_parser.ml  infer.ml  infer.mli  jkinds_lib.cma  jkinds_lib.cmxa  jkinds_lib.cmxs  jkinds_lib__.ml-gen  kind.ml  modality.mli  type_syntax.mli
_build/default/lib/.jkinds_lib.objs/: jkinds_lib.impl.all-deps  jkinds_lib.impl.d  jkinds_lib.intf.all-deps  jkinds_lib.intf.d  jkinds_lib__Decl_parser.impl.all-deps  jkinds_lib__Decl_parser.impl.d  jkinds_lib__Infer.impl.d  jkinds_lib__Infer.intf.d  jkinds_lib__Kind.impl.d  jkinds_lib__Kind.intf.all-deps  jkinds_lib__Kind.intf.d  jkinds_lib__Modality.impl.d  jkinds_lib__Modality.intf.d  jkinds_lib__Type_parser.impl.all-deps  jkinds_lib__Type_parser.impl.d  jkinds_lib__Type_syntax.impl.d  jkinds_lib__Type_syntax.intf.d
_build/default/lib/.merlin-conf/: lib-jkinds
_build/default/test/: test_decl_parser.ml  test_list_demo.ml  test_modality.ml  test_substitute.ml  test_type_parser.ml
_build/default/test/.merlin-conf/: exe-test_list_demo  (+1 more)
lib/: axis_lattice.ml  decl_parser.ml  decl_parser.mli  dune  infer.ml  infer.mli  infer2.ml  infer3.ml  jkind_solver.ml  jkind_solver.mli  jkinds_lib.ml  jkinds_lib.mli  kind.ml  kind.mli  lattice_intf.ml  lattice_intf.mli  lattice_polynomial.ml  lattice_polynomial.mli  lattice_solver.ml  lattice_solver.mli  modality.ml  modality.mli  modality_poly.ml  modality_poly.mli  product_lattice.ml  product_lattice.mli  type_lexer.mll  type_menhir.mly  type_menhir_driver.ml  type_menhir_driver.mli  type_parser.ml  type_syntax.ml  type_syntax.mli
lib/infer1/: infer.ml  infer.mli  modality.ml
lib/infer2/: infer2.ml  lattice_solver.ml  lattice_solver.mli
lib/infer3/: infer3.ml  jkind_solver1.ml  jkind_solver1.mli
lib/infer4/: infer4.ml  lattice_fixpoint_solver.ml  lattice_fixpoint_solver.mli
lib/infer5/: infer5.ml  jkind_solver.ml  jkind_solver.mli
lib/infer6/: WZDD_plan.md  infer6.ml  ldd.ml  ldd.mli  ldd_jkind_solver.ml  ldd_jkind_solver.mli
lib/infer7/: infer7.ml  wdd.ml  wdd.mli  wdd_jkind_solver.ml  wdd_jkind_solver.mli
lib/infer8/: infer8.ml  udd.ml  udd_jkind_solver.ml  udd_jkind_solver.mli
lib/lattices/: axis_lattice.ml  lattice_intf.ml  lattice_polynomial.ml  lattice_polynomial.mli  product_lattice.ml  product_lattice.mli
lib/parser/: decl_parser.ml  decl_parser.mli  dune  type_menhir_driver.mli  type_parser.ml  type_parser.mli  type_syntax.ml
scripts/: generate_benchmarks.py  run_types.sh
test/: dune  infer2_expect_tests.ml  infer2_fh_expect_tests.ml  infer6_discrepancy_expect_tests.ml  infer6_expect_tests.ml  ldd_expect_tests.ml  ldd_sub_subsets_expect_tests.ml  modality_expect_tests.ml  poly_expect_tests.ml  poly_support.ml  solver_expect_tests.ml  test_advice.md  test_cn_simple_ids.ml  test_decl_params_distinct.ml  test_decl_params_ids.ml  test_decl_parser.ml  test_kind.ml  test_kind_apply.ml  test_ldd_poly_pair.ml  test_ldd_solver_pair.ml  test_list_demo.ml  test_mod_annot.ml  test_modality.ml  test_modality_pp.ml  test_parser_props.ml  test_poly_canonical.ml  test_poly_co_sub_props.ml  test_poly_semantics.ml  test_product_lattice.ml  test_properties.ml  test_substitute.ml  test_support.ml  test_type_parser.ml  test_wdd_ldd_pair.ml  type_parser_expect_tests.ml
test/bench/: bench_abstract_concrete_mix.types  bench_cyclic_mu.types  bench_deep_chain.types  bench_dense_cross.types  bench_dense_cross_abstract_100.types  bench_dense_cross_abstract_100_dag.types  bench_dense_cross_abstract_15.types  bench_dense_cross_abstract_20.types  bench_dense_cross_abstract_30.types  bench_dense_cross_abstract_30_dag.types  bench_dense_cross_abstract_50.types  bench_dense_cross_abstract_50_dag.types  bench_dense_cross_concrete.types  bench_dense_cross_concrete_100.types  bench_dense_cross_concrete_100_dag.types  bench_dense_cross_concrete_200.types  bench_dense_cross_mixed_100.types  bench_dense_cross_mixed_100_dag.types  bench_dense_cross_mixed_30.types  bench_dense_cross_mixed_30_dag.types  bench_dense_cross_mixed_50.types  bench_dense_cross_mixed_50_dag.types  bench_dense_cross_simple.types  bench_modality_nesting.types  bench_mutual_group.types  bench_param_permutations.types  bench_wide_arity.types
test/types/: abstracts.types  benjamin.types  btree.types  cn2.types  cn2_min1.types  cn2_min2.types  cn_chain.types  cn_mix.types  cn_novar.types  cn_simple.types  cyclic.types  discrepancy_hunt.types  easy.types  experiments.types  experiments2.types  fh.types  hunt.types  list_sum_pair.types  modalities.types  modals.types  mutual.types  portable.types  ref.types  rose_sum_pair.types  simple_example.types  zipper.types
(+124 files in other folders)
