(lang dune 3.18)

(name jkinds)

(generate_opam_files true)

(using menhir 3.0)

(source
 (github username/jkinds))

(authors "Your Name")

(maintainers "Your Name")

(license MIT)

(documentation https://github.com/username/jkinds)

(package
 (name jkinds)
 (synopsis "A simple OCaml project")
 (description "A longer description of the jkinds project")
 (depends ocaml dune)
 (tags
  (topics "example" "ocaml")))
