(library
 (public_name jkinds)
 (name jkinds_lib)
 (modules
  :standard
  type_syntax
  modality
  kind
  infer2
  infer
  type_parser
  type_menhir
  type_lexer
  type_menhir_driver
  decl_parser
  lattice_intf
  product_lattice
  lattice_polynomial
  lattice_solver
  axis_lattice
  jkinds_lib))

(ocamllex
 (modules type_lexer))

(menhir
 (modules type_menhir))
