(include_subdirs unqualified)

(library
 (public_name jkinds)
 (name jkinds_lib)
 (modules
  :standard
  type_syntax
  modality
  kind
  infer2
  infer
  infer3
  infer4
  infer5
  ldd
  udd
  infer6
  infer8
  wdd
  infer7
  type_parser
  type_menhir
  type_lexer
  type_menhir_driver
  jkind_solver
  ldd_jkind_solver
  udd_jkind_solver
  decl_parser
  lattice_intf
  global_counters
  product_lattice
  lattice_polynomial
  lattice_solver
  axis_lattice
  jkinds_lib))
