(tests
 (names
  test_modality
  test_kind
  test_type_parser
  test_decl_parser
  ; test_substitute (removed: relied on non-exported infer helpers)
  test_product_lattice)
 (libraries jkinds_lib)
 (modules
  (:standard
   \
   poly_expect_tests
   modality_expect_tests
   solver_expect_tests
   infer2_expect_tests)))

(test
 (name test_kind_apply)
 (libraries jkinds_lib)
 (modules test_kind_apply))

(test
 (name test_mod_annot)
 (libraries jkinds_lib)
 (modules test_mod_annot))

(test
 (name test_modality_pp)
 (libraries jkinds_lib)
 (modules test_modality_pp))

(test
 (name test_list_demo)
 (libraries jkinds_lib)
 (modules test_list_demo))

(test
 (name test_properties)
 (libraries jkinds_lib)
 (modules test_properties))

(test
 (name test_parser_props)
 (libraries jkinds_lib)
 (modules test_parser_props))

(test
 (name test_poly_semantics)
 (libraries jkinds_lib)
 (modules poly_support test_poly_semantics))

(test
 (name test_poly_canonical)
 (libraries jkinds_lib)
 (modules poly_support test_poly_canonical))

(test
 (name test_poly_co_sub_props)
 (libraries jkinds_lib)
 (modules poly_support test_poly_co_sub_props))

(library
 (name expect_lib)
 (libraries jkinds_lib)
 (preprocess
  (pps ppx_expect))
 (inline_tests)
 (modules
  poly_expect_tests
  modality_expect_tests
  solver_expect_tests
  infer2_expect_tests))
